# execution-ucx

./: MODULE.bazel
axon/: BUILD.bazel
axon/build_defs/: core_libs.bzl  errors_libs.bzl  metrics_libs.bzl  storage_libs.bzl  tests.bzl  utils_libs.bzl
axon/include/axon/: axon_worker.hpp
axon/python/: BUILD.bazel  pyproject.toml  pyrightconfig.json  setup.py  tests.bzl  wheel.bzl
axon/python/axon/: __init__.py  future.py
axon/python/src/: bindings_runtime.cpp  bindings_runtime_helpers.cpp  bindings_runtime_helpers.hpp  bindings_runtime_wrapper.cpp  dlpack_helpers.cpp  dlpack_helpers.hpp  memory_policy_helpers.cpp  param_conversion.cpp  param_conversion.hpp  python_wake_manager.cpp
axon/python/tests/: benchmark_active_message.py  test_axon_future.py
axon/src/: axon_worker.cpp
axon/tests/: axon_worker_test.cpp
scripts/: format.sh
ucx_context/: BUILD.bazel  ucx_connection.cpp  ucx_connection_manager.cpp  ucx_connection_manager.hpp  ucx_context_data.hpp  ucx_memory_resource.hpp
ucx_context/cuda/: ucx_cuda_memory_manager.hpp
ucx_context/ucx_am_context/: ucx_am_connection_test.cpp  ucx_am_context.cpp  ucx_am_context.hpp  ucx_am_context_perf.cpp  ucx_am_context_test.cpp
