load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@local_config_cuda//cuda:build_defs.bzl", "cuda_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

SUPPORTED_CPP_STANDARDS = [
    "17",
    "20",
    "23",
    "2b",
    "26",
]

[config_setting(
    name = "is_cpp" + v,
    values = {"cxxopt": "-std=c++" + v},
) for v in SUPPORTED_CPP_STANDARDS]

cc_library(
    name = "ucx_context_def_lib",
    hdrs = [
        "ucx_context_def.h",
    ],
)

cc_library(
    name = "ucx_connection",
    srcs = [
        "ucx_connection.cpp",
    ],
    hdrs = [
        "ucx_connection.hpp",
        "ucx_context_logger.hpp",
    ],
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_context_def_lib",
        "@ucx//:ucx_runtime",
    ],
)

cc_library(
    name = "ucx_connection_manager",
    srcs = [
        "ucx_connection_manager.cpp",
    ],
    hdrs = [
        "lock_free_queue.hpp",
        "ucx_connection_manager.hpp",
    ],
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_connection",
    ],
)

cc_library(
    name = "ucx_memory_resource_lib",
    srcs = [
        "ucx_memory_resource.cpp",
    ],
    hdrs = [
        "ucx_memory_resource.hpp",
    ],
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_context_def_lib",
    ],
)

cc_library(
    name = "ucx_context_data_lib",
    hdrs = [
        "ucx_context_data.hpp",
    ],
    deps = [
        ":ucx_memory_resource_lib",
    ],
)

cc_library(
    name = "ucx_am_context",
    srcs = [
        "ucx_am_context/ucx_am_context.cpp",
    ],
    hdrs = [
        "ucx_am_context/ucx_am_context.hpp",
        "ucx_context_concept.hpp",
        "ucx_context_def.h",
        "ucx_context_logger.hpp",
        "ucx_device_context.hpp",
        "ucx_status.hpp",
    ],
    linkopts = ["-lrt"],
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_connection",
        ":ucx_connection_manager",
        ":ucx_context_data_lib",
        "@ucx",
        "@unifex",
    ],
)

cuda_library(
    name = "ucx_cuda_memory_manager",
    hdrs = [
        "cuda/ucx_cuda_macro.h",
        "cuda/ucx_cuda_memory_manager.hpp",
    ],
    target_compatible_with = select({
        "@rules_ml_toolchain//common:is_cuda_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@local_config_cuda//cuda:cudart",
    ],
)

cuda_library(
    name = "ucx_am_context_test_cuda_helper",
    srcs = ["ucx_am_context/ucx_am_context_test_cuda_helper.cu"],
    hdrs = [
        "ucx_am_context/ucx_am_context_test_helper.h",
        "ucx_context_def.h",
    ],
    target_compatible_with = select({
        "@rules_ml_toolchain//common:is_cuda_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@local_config_cuda//cuda:cudart",
    ],
)

cuda_library(
    name = "ucx_cuda_context",
    hdrs = [
        "cuda/ucx_cuda_context.hpp",
        "cuda/ucx_cuda_macro.h",
    ],
    target_compatible_with = select({
        "@rules_ml_toolchain//common:is_cuda_enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@local_config_cuda//cuda:cudart",
    ],
)

cc_library(
    name = "ucx_am_context_test_host_helper",
    srcs = ["ucx_am_context/ucx_am_context_test_host_helper.cpp"],
    hdrs = [
        "ucx_am_context/ucx_am_context_test_helper.h",
        "ucx_context_def.h",
    ],
)

cc_test(
    name = "ucx_context_data_test",
    srcs = ["ucx_context_data_test.cpp"],
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_context_data_lib",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "ucx_am_connection_test",
    srcs = ["ucx_am_context/ucx_am_connection_test.cpp"],
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_connection",
        "@googletest//:gtest_main",
    ],
)

# The test executable is compiled as a cc_binary so that we can wrap it with a sh_test.
cc_binary(
    name = "ucx_am_context_test_bin",
    srcs = [
        "ucx_am_context/ucx_am_context_test.cpp",
    ],
    defines = select({
        "@rules_ml_toolchain//common:is_cuda_enabled": ["CUDA_ENABLED=1"],
        "//conditions:default": ["CUDA_ENABLED=0"],
    }),
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = select({
        "@rules_ml_toolchain//common:is_cuda_enabled": [
            ":ucx_am_context",
            ":ucx_am_context_test_cuda_helper",
            ":ucx_am_context_test_host_helper",
            ":ucx_cuda_context",
            ":ucx_cuda_memory_manager",
            "@googletest//:gtest_main",
            "@local_config_cuda//cuda:cudart",
            "@unifex",
        ],
        "//conditions:default": [
            ":ucx_am_context",
            ":ucx_am_context_test_host_helper",
            "@googletest//:gtest_main",
            "@unifex",
        ],
    }),
)

# WORKAROUND for Bazel _solib flattening and UCX plugin discovery:
# UCX natively uses dladdr() to find libucs.so and appends "/ucx" to load plugins (like libuct_cuda.so).
# Bazel's runfiles system symlinks all dynamic libraries into a flattened _solib directory.
# This completely destroys the relative directory structure expected by UCX.
# Because we strictly forbid statically linking the plugins, and we cannot safely modify
# UCX's default compilation paths without polluting the production .so files,
# the only clean architectural solution is to use a Bazel sh_test wrapper.
# The wrapper accurately extracts the true sandbox path of the plugins from $(rootpaths)
# and injects it into UCX_MODULE_DIR right before execution, ensuring native dlopen()
# success without modifying any C++ code.

write_file(
    name = "generate_run_ucx_test_sh",
    out = "run_ucx_test_generated.sh",
    content = [
        "#!/bin/bash",
        "FIRST_FILE=$(echo \"$RAW_MODULE_FILES\" | awk '{print $1}')",
        "export UCX_MODULE_DIR=$(dirname \"$FIRST_FILE\")",
        "exec \"./$TEST_BIN\" \"$@\"",
    ],
    is_executable = True,
)

sh_test(
    name = "ucx_am_context_test",
    srcs = ["run_ucx_test_generated.sh"],
    data = [
        ":ucx_am_context_test_bin",
        "@ucx//:ucx_transport_shared_libs",
    ],
    env = {
        "RAW_MODULE_FILES": "$(rootpaths @ucx//:ucx_transport_shared_libs)",
        "TEST_BIN": "$(rootpath :ucx_am_context_test_bin)",
    },
)

cc_binary(
    name = "ucx_am_context_perf",
    srcs = ["ucx_am_context/ucx_am_context_perf.cpp"],
    linkstatic = False,  # Important for OpenUCX specific linking
    target_compatible_with = select(
        {":is_cpp" + v: [] for v in SUPPORTED_CPP_STANDARDS} |
        {"//conditions:default": ["@platforms//:incompatible"]},
    ),
    deps = [
        ":ucx_am_context",
        "@unifex",
    ],
)
